# Next

- Fixes library breaking if song has no title-tag

# 6.1.1

- Fixes clicking on album icon in Artist view broken (6.1.0 regression)
- Fixes hitting enter on keyboard navigated file plays wrong song in queue

# 6.1.0

- Compatibility update for plasma 6.6
- Significant performance improvements in the manager for large libraries
- Fix uneven list layout
- Keyboard shortcut changes for selecting items: A for select all, B for selecting neighboring songs from the same albums, V for neighboring songs from the same album-artist. Shift+A/B/V deselects in the same modes. 
- Better handling of empty libraries

# 6.0.4

- Code refactoring for better maintainability
- Adds some confirmation popups on Artists and Playlists page 
- Improves error message display

# 6.0.3

- Adds little confirmation popup when adding items to the queue
- Fixes queue item removal and reordering
- Some more Qt 6 transition 

# 6.0.2

- Adds background highlight to currently playing queue-item
- Changes "Select All" shortcut to "A"
- Fixes word wrapping for long titles
- Fixes song context menu target not spanning whole row
- Removes undesired, automatic mnemonics from nav and volume buttons

# 6.0.1

- Fixes version string in metadata

# 6.0.0

Python 3 (3.6+) is required now. Mpc was dropped as a requirement. Make sure python3 is available on your system!

- Update for plasma 6
- Changes backend from mpc to python-mpd2 (requires python 3.6+)
- Adds "Don't make me scroll over the same library over and over" shuffle button
- Fixes Ctrl+F not reliably jumping to search
- Cleans up and changes some keyboard shortcuts
- Queue's "Follow Mode" tries to be automagic(tm) and the mode-button was removed from the UI 
- "L" shortcut always shows the currently playing song in the Queue (and activates Follow Mode again)
- Provides more keyboard-shortcut hints in the UI
- Changes search to filter for the actual hits instead of the albumartist-list only

# 5.6.0
